--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 /* main-container-sitting*/
 
 .main-container{
-    background-color: rgb(248, 246, 246);
+    background-color: blue;
     
 }
 .main-container > div {
