--- a/style.css
+++ b/style.css
@@ -1,84 +1,34 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-/* main-container-sitting*/
-
-.main-container{
-    background-color: blue;
-    
-}
-.main-container > div {
-     padding: 10px 10px;
-     display: flex;
-    
-}
-/* main-header-sitting*/
-.header-group > div{
-    border:  1px solid rgb(19, 18, 18);
-    margin: 5px;
-    height: 100px;
-}
-/* child-header-sitting*/
-.header1{
-    flex-grow: 5;
-    background-color: aqua;
-}
-.header2{
-    flex-grow: 1;
-    width: 25px;
-    height: 20px;
-    background-color: aqua;
-    
-}
-/* main-left-sidebar-sitting*/
-.left-sidebar{
-    display: flex;
-    flex-grow: 5;
-    height: 40rem;
-   
-}
-/* child-left-sidebar-sitting*/
-.left-sidebar > div{
-    margin: 5px;
-    
-}
-.box-main {
-    padding: 0px;
-    flex-grow: 2;
-    display: none;
-    
-}
-
-/* child-box-main-sitting*/
-.box-main > div{
-    border:  1px solid rgb(14, 13, 13);
-    margin-bottom: 5px;
-    height: 20vh;
-    height: 12.5rem;
-}
-/* mainbox-sitting*/
-.main-box{
-    flex-grow: 5;
-    border:  1px solid rgb(22, 22, 22);
-    background-color: aqua;
-    
-}
-/* main-right-sidebar-sitting*/
-.right-sidebar{
-    border:  1px solid rgb(19, 18, 18);
-    flex-grow: 1.5;
-    display: none;
-    
-}
-/* main-footer-sitting*/
-.footer{
-    display: flex;
-    border:  1px solid rgb(20, 20, 20);
-    background-color: aqua;
-}
-
-
-
+<style>
+      /* CSS styles for the page */
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f2f2f2;
+        margin: 0;
+      }
+      header {
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+      }
+      nav {
+        background-color: #666;
+        color: #fff;
+        padding: 10px;
+      }
+      nav a {
+        color: #fff;
+        text-decoration: none;
+        margin: 0 10px;
+      }
+      section {
+        padding: 20px;
+        margin: 20px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      }
+      footer {
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+      }
+    </style>
